--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.0",
         "react-scripts": "4.0.1",
+        "reactfire": "^3.0.0-rc.0",
         "typescript": "~3.8.2"
     },
     "scripts": {
