--- a/package.json
+++ b/package.json
@@ -2,27 +2,47 @@
     "name": "webapp",
     "version": "0.1.0",
     "private": true,
-    "dependencies": {
-        "@reduxjs/toolkit": "^1.2.5",
-        "@types/jest": "^24.0.0",
-        "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0",
-        "@types/react-redux": "^7.1.7",
-        "dotenv": "^8.2.0",
-        "firebase": "^8.2.5",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-redux": "^7.2.0",
-        "react-scripts": "4.0.1",
-        "reactfire": "^3.0.0-rc.0",
-        "typescript": "~3.8.2"
-    },
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
+    },
+    "dependencies": {
+        "@chakra-ui/icons": "^1.0.4",
+        "@chakra-ui/react": "^1.3.1",
+        "@emotion/react": "^11.1.4",
+        "@emotion/styled": "^11.0.0",
+        "@reduxjs/toolkit": "^1.2.5",
+        "apexcharts": "^3.24.0",
+        "date-fns": "^2.16.1",
+        "firebase": "^8.2.5",
+        "framer-motion": "^3.3.0",
+        "lodash": "^4.17.20",
+        "react": "^17.0.1",
+        "react-apexcharts": "^1.3.7",
+        "react-big-calendar": "^0.31.0",
+        "react-dom": "^17.0.1",
+        "react-icons": "^4.2.0",
+        "react-image-crop": "^8.6.6",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "4.0.1",
+        "react-toastify": "^7.0.3",
+        "reactfire": "^3.0.0-rc.0"
+    },
+    "devDependencies": {
+        "@types/jest": "^24.0.0",
+        "@types/node": "^12.0.0",
+        "@types/react": "^16.9.0",
+        "@types/react-big-calendar": "^0.30.0",
+        "@types/react-dom": "^16.9.0",
+        "@types/react-image-crop": "^8.1.2",
+        "@types/react-redux": "^7.1.7",
+        "@types/react-router-dom": "^5.1.7",
+        "dotenv": "^8.2.0",
+        "node-sass": "^4.14.1",
+        "typescript": "~3.8.2"
     },
     "eslintConfig": {
         "extends": "react-app"
