--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@chakra-ui/react": "^1.3.1",
         "@emotion/react": "^11.1.4",
         "@emotion/styled": "^11.0.0",
+        "@reach/router": "^1.3.4",
         "@reduxjs/toolkit": "^1.2.5",
         "apexcharts": "^3.24.0",
         "date-fns": "^2.16.1",
@@ -26,7 +27,6 @@
         "react-icons": "^4.2.0",
         "react-image-crop": "^8.6.6",
         "react-redux": "^7.2.0",
-        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.1",
         "react-toastify": "^7.0.3",
         "reactfire": "^3.0.0-rc.0"
@@ -34,12 +34,12 @@
     "devDependencies": {
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
+        "@types/reach__router": "^1.3.7",
         "@types/react": "^16.9.0",
         "@types/react-big-calendar": "^0.30.0",
         "@types/react-dom": "^16.9.0",
         "@types/react-image-crop": "^8.1.2",
         "@types/react-redux": "^7.1.7",
-        "@types/react-router-dom": "^5.1.7",
         "dotenv": "^8.2.0",
         "node-sass": "^4.14.1",
         "typescript": "~3.8.2"
