--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
+        "deploy": "gh-pages -d build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -41,6 +42,7 @@
         "@types/react-image-crop": "^8.1.2",
         "@types/react-redux": "^7.1.7",
         "dotenv": "^8.2.0",
+        "gh-pages": "^3.1.0",
         "node-sass": "^4.14.1",
         "typescript": "~3.8.2"
     },
