--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "node-sass": "^4.14.1",
         "typescript": "~3.8.2"
     },
+    "homepage": "https://hannesdahlvik.github.io/budget-planner-webapp/",
     "eslintConfig": {
         "extends": "react-app"
     },
