--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "node-sass": "^4.14.1",
         "typescript": "~3.8.2"
     },
-    "homepage": "https://hannesdahlvik.github.io/budget-planner-webapp/",
+    "homepage": "http://139.59.131.160/",
     "eslintConfig": {
         "extends": "react-app"
     },
